examples/python_envs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-env
spec:
  selector:
    app: py-env
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
