examples/python_envs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: "py-env.tancrede.k8s.isitech.tancou.fr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: py-env
            port:
              number: 5000
